--- a/config.ui
+++ b/config.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.20.0 -->
 <interface>
-  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gtk+" version="3.10"/>
   <object class="GtkDialog" id="fileorganizer">
     <property name="width_request">400</property>
     <property name="can_focus">False</property>
@@ -22,7 +22,6 @@
             <child>
               <object class="GtkButton" id="savebutton">
                 <property name="label">gtk-save</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -37,12 +36,10 @@
             <child>
               <object class="GtkButton" id="closebutton">
                 <property name="label">gtk-close</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-                <property name="xalign">0.47999998927116394</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -62,6 +59,8 @@
           <object class="GtkLabel" id="toplabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="halign">center</property>
+            <property name="margin_bottom">7</property>
             <property name="label" translatable="yes">File Organizer Preferences</property>
             <attributes>
               <attribute name="style" value="normal"/>
@@ -84,18 +83,15 @@
               <object class="GtkBox" id="previewbox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">12</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">5</property>
                 <child>
                   <object class="GtkCheckButton" id="previewbutton">
                     <property name="label" translatable="yes">Preview Mode</property>
-                    <property name="use_action_appearance">False</property>
-                    <property name="width_request">170</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">start</property>
                     <property name="image_position">right</property>
                     <property name="draw_indicator">True</property>
                   </object>
@@ -116,17 +112,15 @@
               <object class="GtkBox" id="cleanupbox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">12</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">5</property>
                 <child>
                   <object class="GtkCheckButton" id="cleanupbutton">
                     <property name="label" translatable="yes">File/Folder Cleanup</property>
-                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">start</property>
                     <property name="image_position">right</property>
                     <property name="draw_indicator">True</property>
                   </object>
@@ -147,17 +141,15 @@
               <object class="GtkBox" id="removebox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">12</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">5</property>
                 <child>
                   <object class="GtkCheckButton" id="removebutton">
                     <property name="label" translatable="yes">Remove Empty Folders</property>
-                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">start</property>
                     <property name="image_position">right</property>
                     <property name="draw_indicator">True</property>
                   </object>
@@ -175,20 +167,18 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox" id="logbox">
+              <object class="GtkBox" id="ntfsbox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">12</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">5</property>
                 <child>
-                  <object class="GtkCheckButton" id="logbutton">
-                    <property name="label" translatable="yes">Log File</property>
-                    <property name="use_action_appearance">False</property>
+                  <object class="GtkCheckButton" id="ntfsbutton">
+                    <property name="label" translatable="yes">Strip NTFS Chars</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">start</property>
                     <property name="image_position">right</property>
                     <property name="draw_indicator">True</property>
                   </object>
@@ -196,43 +186,6 @@
                     <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkBox" id="log_pathbox">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <child>
-                      <object class="GtkLabel" id="log_path_label">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="xpad">1</property>
-                        <property name="label" translatable="yes">Log File Location:</property>
-                        <property name="justify">fill</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkEntry" id="log_path">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="invisible_char">●</property>
-                      </object>
-                      <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">2</property>
                   </packing>
                 </child>
               </object>
@@ -243,63 +196,35 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox" id="coverbox">
+              <object class="GtkBox" id="log_pathbox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">12</property>
-                <property name="orientation">vertical</property>
-                <property name="spacing">5</property>
+                <property name="spacing">65</property>
                 <child>
-                  <object class="GtkCheckButton" id="coverbutton">
-                    <property name="label" translatable="yes">Import Cover Art</property>
-                    <property name="use_action_appearance">False</property>
+                  <object class="GtkCheckButton" id="logbutton">
+                    <property name="label" translatable="yes">Log File</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="xalign">0</property>
                     <property name="image_position">right</property>
                     <property name="draw_indicator">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">1</property>
+                    <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkBox" id="cover_namesbox">
+                  <object class="GtkEntry" id="log_path">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <child>
-                      <object class="GtkLabel" id="cover_names_label">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="xpad">1</property>
-                        <property name="label" translatable="yes">Cover Art Filenames:</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkEntry" id="cover_names">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="invisible_char">●</property>
-                      </object>
-                      <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
+                    <property name="can_focus">True</property>
+                    <property name="invisible_char">●</property>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
-                    <property name="position">2</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
               </object>
@@ -310,26 +235,34 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox" id="ntfsbox">
+              <object class="GtkBox" id="cover_namesbox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">12</property>
-                <property name="orientation">vertical</property>
-                <property name="spacing">5</property>
+                <property name="spacing">8</property>
                 <child>
-                  <object class="GtkCheckButton" id="ntfsbutton">
-                    <property name="label" translatable="yes">Strip NTFS Chars</property>
-                    <property name="use_action_appearance">False</property>
+                  <object class="GtkCheckButton" id="coverbutton">
+                    <property name="label" translatable="yes">Import Cover Art</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
                     <property name="halign">start</property>
-                    <property name="xalign">0</property>
                     <property name="image_position">right</property>
                     <property name="draw_indicator">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkEntry" id="cover_names">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="invisible_char">●</property>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
@@ -345,18 +278,15 @@
               <object class="GtkBox" id="tagsbox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">12</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">5</property>
                 <child>
                   <object class="GtkCheckButton" id="tagsbutton">
                     <property name="label" translatable="yes">Update File Tags</property>
-                    <property name="use_action_appearance">False</property>
-                    <property name="width_request">170</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="xalign">0</property>
+                    <property name="halign">start</property>
                     <property name="image_position">right</property>
                     <property name="draw_indicator">True</property>
                   </object>
